--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,11 @@
 
 <head>
 	<meta charset="utf-8" />
-	<link rel="icon" href="./images/logo.ico" />
+	<link rel="icon" href="assets/images/logo.ico" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta name="theme-color" content="#000000" />
-	<meta name="description" content="Web site created using create-react-app" />
-	<link rel="apple-touch-icon" href="./images/logo.ico" />
+	<meta name="description" content="Memory Clicker Game" />
+	<link rel="apple-touch-icon" href="assets/images/logo.ico" />
 	<title>Memorization Game</title>
 </head>
 
